fixed footer spacing isue when sizing the screen smaller

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -1328,16 +1328,16 @@ footer img {
 @media screen and (min-width: 1026px) {
 
     footer {
-        padding-top: 550px !important;
+        padding-top: 620px !important;
     }
 
     .footer-img {
-        top: -100px;
+        top: 0;
         width: 110%;
     }
 
     .flex-group {
-        width: 1100px;
+        max-width: 1100px;
         margin: auto;
     }
 
@@ -1466,6 +1466,46 @@ footer img {
         -webkit-transform: translateY(-25px);
             -ms-transform: translateY(-25px);
                 transform: translateY(-25px);
+    }
+}
+
+/* Footer Alignment */
+@media screen and (min-width: 1560px) and (max-width: 1790px) {
+
+    footer {
+        padding-top: 550px !important;
+    }
+
+}
+
+@media screen and (min-width: 1300px) and (max-width: 1559px) {
+
+    footer {
+        padding-top: 450px !important;
+    }
+
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1399px) {
+
+    footer {
+        padding-top: 250px !important;
+    }
+
+    .flex-group {
+        margin-top: 230px;
+    }
+
+}
+
+@media screen and (min-width: 1026px) and (max-width: 1199px) {
+
+    footer {
+        padding-top: 0px !important;
+    }
+
+    .flex-group {
+        padding-top: 450px;
     }
 
 }
