--- a/css/style.css
+++ b/css/style.css
@@ -1144,7 +1144,7 @@
     /*-- -------------------------- -->
     <---           PRICING          -->
     <--- -------------------------- -*/
-
+    
     .piggy-bank {
         width: 400px;
         margin-top: 100px;
@@ -1634,7 +1634,6 @@
     <--- -------------------------- -*/
 
     #prices {
-        margin-bottom: 100px;
         height: 100px !important;
     }
 
